--- a/UnconstrainedMelody/UnconstrainedMelody.csproj
+++ b/UnconstrainedMelody/UnconstrainedMelody.csproj
@@ -1,68 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{62DEA85A-255B-4A44-8C4E-CD0C9542F95D}</ProjectGuid>
+    <AssemblyName>UnconstrainedMelody.Original</AssemblyName>
+    <Title>UnconstrainedMelody</Title>
+    <Description>Helpful static methods (or extension methods) for enums and delegates, with constraints which can't be expressed in regular C#.</Description>
+    <Authors>Jon Skeet</Authors>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+
+    <PackageId>$(AssemblyName)</PackageId>
+    <PackageLicenseUrl>https://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/jskeet/unconstrained-melody</PackageProjectUrl>
+    <PackageTags>generics;delegate;enum</PackageTags>
+
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnconstrainedMelody</RootNamespace>
-    <AssemblyName>UnconstrainedMelody</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>3.5</OldToolsVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
+    
     <DocumentationFile>..\Rewritten\UnconstrainedMelody.xml</DocumentationFile>
+    <GenerateDocumentationFile Condition="'$(Configuration)'=='Release'">true</GenerateDocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
+  
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Delegates.cs" />
-    <Compile Include="DelegateConstraint.cs" />
-    <Compile Include="EnumInternals.cs" />
-    <Compile Include="Flags.cs" />
-    <Compile Include="IEnumConstraint.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeArgumentException.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)\ConstraintChanger\bin\$(ConfigurationName)\ConstraintChanger"</PostBuildEvent>
+    <PostBuildEvent>
+      $(MSBuildProjectDirectory)\..\ConstraintChanger\Published\ConstraintChanger.exe
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
